--- a/style.css
+++ b/style.css
@@ -895,13 +895,15 @@ br {
 /*Ñ¡×ù*/
 .seat-container{
   width: 960px;
-  height: 100%;
+  height: 100vh;
+  background-color: #f1f4f7;
 }
 
 .seat-movie-info-box{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: white;
 }
 
 .seat-movie-info-box .movie-name{
@@ -925,6 +927,8 @@ br {
 }
 
 .seat-box-container{
+  display: flex;
+  flex-direction: column;
   position: relative;
   width: 100%;
 }
@@ -955,4 +959,22 @@ br {
   height: 34px;
   text-align: center;
   color: #fff;
+}
+
+.main-head{
+  padding-top: 1.5rem;
+  color: #f5f5f5;
+  height: 5.2rem;
+  font-size: 1rem;
+  text-align: center;
+  line-height: 2.5rem;
+}
+
+.seat{
+  width: 40px;
+  height: 40px;
+}
+
+.seat img{
+  width: 100%;
 }
